<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/tool_bar"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <ImageView
            android:layout_marginLeft="10dp"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/icon_book"/>
        <TextView
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:text="@string/resume"
            android:gravity="center_vertical"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="25dp"
            android:layout_height="match_parent" />
    </LinearLayout>
    <include layout="@layout/line"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tvPic"
                android:layout_width="match_parent"
                android:text="@string/Products_show"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="25dp"
                android:layout_height="50dp" />
            <ImageView
                android:id="@+id/StylePicUrl"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"

            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:textStyle="italic"
                        android:textColor="@color/black"
                        android:text="@string/season" />
                    <TextView
                        android:id="@+id/Season"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="无"
                        android:layout_marginLeft="5dp"
                        android:textColor="@color/black"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:textColor="@color/black"
                        android:textStyle="italic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="@string/style_no" />

                    <TextView
                        android:id="@+id/FEPO"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="未查到"
                        android:layout_marginLeft="5dp"
                        android:textColor="@color/black"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">
                    <TextView
                        android:textColor="@color/black"
                        android:textStyle="italic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="@string/category" />
                    <TextView
                        android:id="@+id/SampleType"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="无"
                        android:layout_marginLeft="5dp"
                        android:textColor="@color/black"/>
                </LinearLayout>
            </LinearLayout>
            <include layout="@layout/line"/>
            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:orientation="horizontal">
                <TextView
                    android:textStyle="bold"
                    android:gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:textColor="@color/black"
                    android:layout_height="match_parent"
                    android:text="@string/template"/>
                <TextView
                    android:id="@+id/MobanDs"
                    android:gravity="center_vertical"
                    android:layout_weight="1"
                    android:scrollbars="vertical"
                    android:singleLine="false"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/black"
                    android:text=""/>
            </LinearLayout>
            <include layout="@layout/line"/>
            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="horizontal">
                <TextView
                    android:textStyle="bold"
                    android:gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:textColor="@color/black"
                    android:layout_height="match_parent"
                    android:text="@string/technology"/>
                <TextView
                    android:id="@+id/GongYiDs"
                    android:gravity="center_vertical"
                    android:layout_weight="1"
                    android:scrollbars="vertical"
                    android:singleLine="false"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/black"
                    android:text=""/>
            </LinearLayout>
            <include layout="@layout/line"/>
            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:orientation="horizontal">
                <TextView
                    android:textStyle="bold"
                    android:gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:textColor="@color/black"
                    android:layout_height="match_parent"
                    android:text="@string/tools"/>
                <TextView
                    android:id="@+id/FuZhuGongJuDs"
                    android:gravity="center_vertical"
                    android:layout_weight="1"
                    android:scrollbars="vertical"
                    android:singleLine="false"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/black"
                    android:text=""/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <include layout="@layout/line"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:textStyle="bold"
            android:gravity="center_vertical"
            android:layout_width="70dp"
            android:textColor="@color/black"
            android:layout_height="match_parent"
            android:text="@string/equipment"/>
        <TextView
            android:id="@+id/TeShuSheBeiDs"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:text="主标、门襟织标电子花样车，先拿模板调试机器侧缝、袖下曲臂车"/>
    </LinearLayout>
    <include layout="@layout/line"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:textStyle="bold"
            android:gravity="center_vertical"
            android:layout_width="70dp"
            android:textColor="@color/black"
            android:layout_height="match_parent"
            android:text="@string/parameter"/>
        <TextView
            android:id="@+id/SheBeiCanShuDs"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:text=""/>
    </LinearLayout>
    <include layout="@layout/line"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:textStyle="bold"
            android:gravity="center_vertical"
            android:layout_width="70dp"
            android:textColor="@color/black"
            android:layout_height="match_parent"
            android:text="@string/key_point"/>
        <TextView
            android:id="@+id/MoBanZhongDianDs"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:text="下巴装饰贴斜丝缕:"/>
    </LinearLayout>
    <include layout="@layout/line"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:textStyle="bold"
            android:gravity="center_vertical"
            android:layout_width="70dp"
            android:textColor="@color/black"
            android:layout_height="match_parent"
            android:text="@string/sale_risk"/>
        <TextView
            android:id="@+id/XianYangFengXianDs"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:text=""/>
    </LinearLayout>
    <include layout="@layout/line"/>
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:textStyle="bold"
            android:gravity="center_vertical"
            android:layout_width="70dp"
            android:textColor="@color/black"
            android:layout_height="match_parent"
            android:text="@string/other"/>
        <TextView
            android:id="@+id/OtherDs"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:text=""/>
    </LinearLayout>
    <include layout="@layout/line"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/icon_buray"/>
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/process_video"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="25dp"
            android:layout_height="match_parent" />
        <TextView
            android:id="@+id/PEVideo_link"
            android:layout_width="wrap_content"
            android:text="@string/intact_link"
            android:layout_marginRight="10dp"
            android:gravity="center_vertical"
            android:textColor="@color/red"
            android:textSize="15dp"
            android:layout_height="match_parent" />
    </LinearLayout>

    <GridView
        android:layout_weight="1"
        android:id="@+id/gridVideo"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:columnWidth="150dp"
        android:horizontalSpacing="5dp"
        android:numColumns="2"
        />
    <!--<ListView-->
        <!--android:id="@+id/listVideo"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="100dp"-->
        <!--android:layout_weight="1">-->
    <!--</ListView>-->
</LinearLayout>